--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
         <div id="E34">
             <button>Sign In</button>
         </div>
-</div>
+       </div>
+       <div id="E4">
+        <h5>Need help signing in?</h5>
+        <marquee behavior="" direction="right">C 2025 WarnerMedia Direct,LLC. All rights reserved</marquee>
+    </div>
+
     </div>
     
 </body>
